Update Exercise Module 1.html

--- a/Exercise Module 1.html
+++ b/Exercise Module 1.html
@@ -6,10 +6,11 @@
 </head>
 <body>
      <img
-	     alt="Margaritas con fondo verde"
+	         alt="Margaritas con fondo verde"
 		 src="Capture.JPG"
 		 width="200" height="160">
-     <h1>Poema sobre la margarita</h1>
+     <h1>Poema sobre la margarita
+	</h1>
      <p>
 	 Extasiada contemplo la margarita<br>
      con sus blancos e inmaculados pétalos<br>
@@ -24,10 +25,11 @@
      El ultimo pétalo un ¡te quiero!<br>
      dulces sonrisas<br>
      desojando la margarita.<br><br>
-	 </p>
-	 <p>Este poema es de <q>Alguna persona de Google</q> y lo puedes encontrar <a href="http://www.mundopoesia.com/foros/temas/margarita-flor-silvestre.584550/">aquí</a></p>
+       </p>
+     <p>Este poema es de <q>Alguna persona de Google</q> y lo puedes encontrar <a href="http://www.mundopoesia.com/foros/temas/margarita-flor-silvestre.584550/">aquí</a></p>
 	 
-	<h2>¿Qué es un poema?</h2>
+     <h2>¿Qué es un poema?
+	</h2>
 	<dl>
 	   <dt>Poema-según Google:</dt><br>
 	      <dd>1.Composición literaria que se concibe como expresión artística de la belleza por medio de la palabra,<br>
