--- a/Trying_Characters.html
+++ b/Trying_Characters.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!--Exercise edX course-->
+    <!--Putting into practice theory from edX course-->
 
 <head>
     <meta charset="UTF-8">
