--- a/Trying_audio_video_embed.html
+++ b/Trying_audio_video_embed.html
@@ -7,12 +7,12 @@
 </head>
 <body>
   <audio controls muted autoplay>
-    <source src="avion.mp3" type="audio/mp3"/>
-    <source src="avion.wav" type="audio/wav"/>
+    <source src="Trying_audio_video_embed_avion.mp3" type="audio/mp3"/>
+    <source src="Trying_audio_video_embed_avion.wav" type="audio/wav"/>
     You browser does not support this audio file.
   </audio>
   <video width="600" height="600"  class="playr_video" controls>
-    <source src="gatos.mp4" type="video/mp4">
+    <source src="Trying_audio_video_embed_gatos.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   <iframe src="http://facebook.com">
